[gd_scene load_steps=3 format=3 uid="uid://5m35vx13hnl5"]

[ext_resource type="Script" path="res://addons/sprite_sheet/scene/component/texture_node_item/item.gd" id="1_j6qch"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wiu7q"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 0.101961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.501961)

[node name="item" type="MarginContainer"]
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 0
script = ExtResource("1_j6qch")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="border" type="Panel" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wiu7q")

[node name="group_label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
